@@ -1,3 +1,12 @@
+2003-05-06  Darin Adler  <darin@apple.com>
+
+        Reviewed by Ken.
+
+        - used ObjectAlloc to find large numbers of allocations on startup and get rid of some
+
+        * kwq/KWQColor.mm: (QColor::getNSColor): Keep a cache of 32 colors instead of returning a new
+        one each time. Also use special cases for black and white.
+
 2003-05-05  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Dave.
